package com.swp391.backend.enums;

public enum CommonStatus {
    active,
    inactive
}
