package com.swp391.backend.enums;

public enum DiscountType {
    percent,
    fixed_amount
}
